--- a/BLAZAM/Shared/UI/SearchPageHeader.razor
+++ b/BLAZAM/Shared/UI/SearchPageHeader.razor
@@ -68,7 +68,7 @@
                             }
                             else
                             {
-                                <MudButton Float="Float.End" Type="ButtonType.Submit" Color="Color.Primary">Search</MudButton>
+                                <MudButton Float="Float.End" ButtonType="ButtonType.Submit" Color="Color.Primary">Search</MudButton>
 
                             }
 
