--- a/BLAZAM/Shared/UI/Settings/Permissions/PrivilegeMapper.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/PrivilegeMapper.razor
@@ -33,7 +33,7 @@
 @code {
 
 #nullable disable warnings
-    TreeView<IADOrganizationalUnit> OUTree { get; set; }
+    MudTreeView<IADOrganizationalUnit> OUTree { get; set; }
     IADOrganizationalUnit selectedNode;
     IList<IADOrganizationalUnit> ExpandedNodes = new List<IADOrganizationalUnit>();
     IList<IADOrganizationalUnit> ApplicationBaseOUs = new List<IADOrganizationalUnit>();
