--- a/BLAZAM/Shared/UI/Settings/EmailSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/EmailSettings.razor
@@ -4,172 +4,95 @@
 
 <LoadingIndicator Height="Height.Is100" Visible=LoadingData>
 
-        <MudText Typo ="Typo.h1">@SettingsLocalization["Email Settings"]</MudText>
-        <MudForm @onsubmit="Save">
+    <MudText Typo="Typo.h1">@SettingsLocalization["Email Settings"]</MudText>
+    <MudForm @onsubmit="Save">
 
-            <Validations Mode="ValidationMode.Auto" Model="@settings" StatusChanged="OnValidation">
-                <SettingsField>
-                    <MudFieldLabel>@SettingsLocalization["Email Enabled"]</FieldLabel>
-                    
-                        <MudSwitch @bind-Checked="settings.Enabled" />
-                    
-                </SettingsField>
+        <SettingsField>
+
+            <MudSwitch Label="@SettingsLocalization["Email Enabled"]" @bind-Checked="settings.Enabled" />
+
+        </SettingsField>
 
 
-                <Validation>
-                    <SettingsField>
-                        <MudFieldLabel>@SettingsLocalization["Admin bcc"]</FieldLabel>
-
-                        <MudFieldHelp>
-                            Addresses to blind copy all application emails that are sent.
-                        </FieldHelp>
-                        
-
-                            <MudTextField  @bind-Value="settings.AdminBcc">
-                                
-                                    
-                                
-                            </MudTextField >
-                        
+        <SettingsField>
 
 
-                    </SettingsField>
-                </Validation>
+            <MudTextField Label="@SettingsLocalization["Admin bcc"]"
+                          HelperText="Addresses to blind copy all application emails that are sent." @bind-Value="settings.AdminBcc"/>
 
-                <Validation>
-                    <SettingsField>
-                        <MudFieldLabel>@SettingsLocalization["SMTP Server"]</FieldLabel>
-                        
+        </SettingsField>
 
-                            <MudTextField  @bind-Value="settings.SMTPServer">
-                                
-                                    
-                                
-                            </MudTextField >
-                        
-                    </SettingsField>
-                </Validation>
-                <Validation>
-                    <SettingsField>
-                        <MudFieldLabel>@SettingsLocalization["SMTP Port"]</FieldLabel>
-                        
+        <SettingsField>
 
-                            <MudNumericField HideSpinButtons="true" @bind-Value="settings.SMTPPort">
-                                
-                                    
-                                
-                            </NumericEdit>
-                        
-                    </SettingsField>
-                </Validation>
-                <SettingsField>
-                    <MudFieldLabel>@SettingsLocalization["Use TLS"]</FieldLabel>
-                    
-                        <MudSwitch TValue="bool" @bind-Checked="settings.UseTLS" />
-                    
-                </SettingsField>
 
-                <SettingsField>
-                    <MudFieldLabel>@SettingsLocalization["Use SMTP Authentication"]</FieldLabel>
-                    
-                        <MudSwitch TValue="bool" @bind-Checked="settings.UseSMTPAuth" />
-                    
-                </SettingsField>
+            <MudTextField Label="@SettingsLocalization["SMTP Server"]" @bind-Value="settings.SMTPServer"/>
 
-                @if (settings.UseSMTPAuth)
-                {
-                    <Validation>
-                        <SettingsField>
-                            <MudFieldLabel>@SettingsLocalization["SMTP Username"]</FieldLabel>
-                            
-                                <MudTextField  @bind-Value="settings.SMTPUsername">
-                                    
-                                        
-                                    
-                                </MudTextField >
-                            
-                        </SettingsField>
-                    </Validation>
-                    <Validation>
-                        <SettingsField>
-                            <MudFieldLabel>@SettingsLocalization["SMTP Password"]</FieldLabel>
-                            
+        </SettingsField>
+        <SettingsField>
 
-                                <MudTextField  @bind-Value="settings.SMTPPassword">
-                                    
-                                        
-                                    
-                                </MudTextField >
-                            
-                        </SettingsField>
-                    </Validation>
-                }
-                <Validation>
-                    <SettingsField>
-                        <MudFieldLabel>@SettingsLocalization["From Address"]</FieldLabel>
-                        
 
-                            <MudTextField  @bind-Value="settings.FromAddress">
-                                
-                                    
-                                
-                            </MudTextField >
-                        
-                    </SettingsField>
-                </Validation>
-                <Validation>
-                    <SettingsField>
-                        <MudFieldLabel>@SettingsLocalization["From Display Name"]</FieldLabel>
-                        
+            <MudNumericField T="int" Label="@SettingsLocalization["SMTP Port"]" HideSpinButtons="true" @bind-Value="settings.SMTPPort" />
 
-                            <MudTextField  @bind-Value="settings.FromName">
-                                
-                                    
-                                
-                            </MudTextField >
-                        
-                    </SettingsField>
-                </Validation>
-                <Validation>
-                    <SettingsField>
-                        <MudFieldLabel>@SettingsLocalization["Reply-To Address"]</FieldLabel>
-                        
+        </SettingsField>
+        <SettingsField>
 
-                            <MudTextField  @bind-Value="settings.ReplyToAddress">
-                                
-                                    
-                                
-                            </MudTextField >
-                        
-                    </SettingsField>
-                </Validation>
-                <Validation>
-                    <SettingsField>
-                        <MudFieldLabel>@SettingsLocalization["Reply-To Display Name"]</FieldLabel>
-                        
+            <MudSwitch Label="@SettingsLocalization["Use TLS"]" @bind-Checked="settings.UseTLS" />
 
-                            <MudTextField  @bind-Value="settings.ReplyToName">
-                                
-                                    
-                                
-                            </MudTextField >
-                        
-                    </SettingsField>
-                </Validation>
-                <Validations Model="testRecipient" StatusChanged="OnValidation">
-                    <Validation Validator="ValidationRule.IsEmail">
-                        <MudTextField  Disabled=@(!settings.Enabled) @bind-Value=testRecipient />
-                        <MudButton Disabled=@(!settings.Enabled && !settings.Valid()) @onclick="SendTestEmail" Color="Color.Success">Send Test Email</MudButton>
-                    </Validation>
-                </Validations>
+        </SettingsField>
 
-                <SettingsField>
-                    
-                        <MudButton Disabled="saveDisabled" Type="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
-                    
-                </SettingsField>
-            </Validations>
-        </MudForm>
+        <SettingsField>
+
+            <MudSwitch Label="@SettingsLocalization["Use SMTP Authentication"]" @bind-Checked="settings.UseSMTPAuth" />
+
+        </SettingsField>
+
+        @if (settings.UseSMTPAuth)
+        {
+            <SettingsField>
+
+                <MudTextField Label="@SettingsLocalization["SMTP Username"]" @bind-Value="settings.SMTPUsername"/>
+            </SettingsField>
+            <SettingsField>
+
+
+                <MudTextField Label="@SettingsLocalization["SMTP Password"]" @bind-Value="settings.SMTPPassword"/>
+
+            </SettingsField>
+        }
+        <SettingsField>
+
+
+            <MudTextField Label="@SettingsLocalization["From Address"]" @bind-Value="settings.FromAddress"/>
+        </SettingsField>
+        <SettingsField>
+
+
+            <MudTextField Label="@SettingsLocalization["From Display Name"]" @bind-Value="settings.FromName"/>
+
+        </SettingsField>
+        <SettingsField>
+
+
+            <MudTextField Label="@SettingsLocalization["Reply-To Address"]" @bind-Value="settings.ReplyToAddress"/>
+
+        </SettingsField>
+        <SettingsField>
+
+
+            <MudTextField Label="@SettingsLocalization["Reply-To Display Name"]" @bind-Value="settings.ReplyToName"/>
+
+        </SettingsField>
+
+        <MudTextField Disabled=@(!settings.Enabled) @bind-Value=testRecipient />
+        
+        <MudButton Disabled=@(!settings.Enabled && !settings.Valid()) @onclick="SendTestEmail" Color="Color.Success">Send Test Email</MudButton>
+
+        <SettingsField>
+
+            <MudButton Disabled="saveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+
+        </SettingsField>
+    </MudForm>
 </LoadingIndicator>
 @code {
 #nullable disable warnings
@@ -208,7 +131,7 @@
     }
     protected override void Save()
     {
-        if (settings.Id == 0 && Context!=null)
+        if (settings.Id == 0 && Context != null)
         {
             Context.EmailSettings.Add(settings);
         }
