--- a/BLAZAM/Shared/UI/Settings/Permissions/EditAccessLevel.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/EditAccessLevel.razor
@@ -1,188 +1,169 @@
-
 @inherits ValidatedForm
 
 
-<Validations Mode=ValidationMode.Auto Model="WorkingModel" StatusChanged="OnValidation">
+<Row>
     <Row>
-        <Column>
-            <Row>
-                <Validation>
-                    <MudField ColumnSize="ColumnSize.IsHalf.OnTablet">
-                        <MudFieldLabel>@SettingsLocalization["Name"]</FieldLabel>
-                        
-                            <MudTextField  @bind-Value=WorkingModel.Name>
+        <MudField ColumnSize="ColumnSize.IsHalf.OnTablet">
 
-                                
-                                    
-                                
-                            </MudTextField >
+            <MudTextField Label="@SettingsLocalization["Name"]" @bind-Value=WorkingModel.Name>
 
 
-                        
-                    </MudField>
-                </Validation>
-                <MudField Horizontal ColumnSize="ColumnSize.IsHalf.OnTablet">
-                    <MudFieldLabel>
-                        @SettingsLocalization["Assign Objects"]
-                    </FieldLabel>
-                    @foreach (var adObjectType in Enum.GetValues(typeof(ActiveDirectoryObjectType)))
-                    {
-                        if ((ActiveDirectoryObjectType)adObjectType != ActiveDirectoryObjectType.All)
-                        {
-                            //Prepare data to show object access addbutons
-                            var existingAccess = WorkingModel.ObjectMap.Where(m => m.ObjectType == (ActiveDirectoryObjectType)adObjectType).FirstOrDefault();
-                            bool buttonDisabled = true;
-                            if (existingAccess == null)
-                            {
-                                buttonDisabled = false;
-                            }
-                            var name = Enum.GetName(typeof(ActiveDirectoryObjectType), adObjectType);
-                            <Column ColumnSize="ColumnSize.IsQuarter.OnFullHD.IsHalf">
-                                <MudButton Width=Width.Is100 Disabled=buttonDisabled Color=Color.Success Clicked="()=>AddObjectTypeAccess(adObjectType)">@SettingsLocalization[name]</MudButton>
-                            </Column>
-                        }
-                    }
-                </MudField>
-            </Row>
-            @if (WorkingModel.ObjectMap.Count > 0)
+
+
+            </MudTextField>
+
+
+
+        </MudField>
+        <MudField Horizontal ColumnSize="ColumnSize.IsHalf.OnTablet">
+            <MudText>
+                @SettingsLocalization["Assign Objects"]
+            </MudText>
+            @foreach (var adObjectType in Enum.GetValues(typeof(ActiveDirectoryObjectType)))
             {
-
-
-                <Row>
-                    <h3>Assign Object Permissions</h3>
-
-                </Row>
-            }
-            @foreach (var objectMap in WorkingModel.ObjectMap)
-            {
-                //Prepare data to show object access fields
-
-                var name = Enum.GetName(typeof(ActiveDirectoryObjectType), objectMap.ObjectType);
-
-                <MudField Horizontal Margin="Margin.Is2.OnY">
-                <MudFieldLabel ColumnSize="ColumnSize.Is4" Class="h3">@SettingsLocalization[name]</FieldLabel>
-                <MudFieldBody ColumnSize="ColumnSize.Is6">
-
-                    <Select TValue="int" SelectedValueChanged="(int value)=>SetObjectMapAccess(objectMap,value)" SelectedValue="objectMap.ObjectAccessLevelId">
-
-                        @foreach (ObjectAccessLevel levelValue in ObjectAccessLevels.Levels)
-                            {
-                                <SelectItem Value="levelValue.Id">@SettingsLocalization[levelValue.Name]</SelectItem>
-
-                            }
-                        </Select>
-                        @if (objectMap.ObjectType == ActiveDirectoryObjectType.User && objectMap.ObjectAccessLevelId != ObjectAccessLevels.Deny.Id)
-                        {
-                            <MudSwitch @bind-Checked=objectMap.AllowDisabled>@SettingsLocalization["Allow Disabled User Access"]</Switch>
-                        }
-                    
-                    <MudFieldBody ColumnSize="ColumnSize.Is2">
-                        <AppCloseButton Clicked="()=>RemoveObjectTypeAccess(objectMap)" />
-
-                    
-                </MudField>
-                @if (objectMap.ObjectAccessLevelId != 0 && objectMap.ObjectAccessLevelId != ObjectAccessLevels.Deny.Id)
+                if ((ActiveDirectoryObjectType)adObjectType != ActiveDirectoryObjectType.All)
                 {
-
-                    <h4>@name Actions</h4>
-
-                    <MudField>
-                    @foreach (var action in actions.OrderBy(f => f.Name))
-                        {
-                            if (action.IsActionAppropriateForObject(objectMap.ObjectType))
-                            {
-                                if (!WorkingModel.ActionMap.Any(a => a.ObjectAction == action))
-                                {
-
-
-
-                                    <Column ColumnSize="ColumnSize.IsAuto" Margin="Margin.Is1">
-                                        <MudButton Color=Color.Secondary Clicked="()=>AddActionAccess(action,objectMap.ObjectType)">@SettingsLocalization[@action.Name+" "+@name]</MudButton>
-                                    </Column>
-                                }
-                            }
-                        }
-                    </MudField>
-                    @if (WorkingModel.ActionMap.Any())
+                    //Prepare data to show object access addbutons
+                    var existingAccess = WorkingModel.ObjectMap.Where(m => m.ObjectType == (ActiveDirectoryObjectType)adObjectType).FirstOrDefault();
+                    bool buttonDisabled = true;
+                    if (existingAccess == null)
                     {
-                        foreach (var actionMap in WorkingModel.ActionMap.ToList())
-                        {
-                            string? aname = Enum.GetName(typeof(ActiveDirectoryObjectType), actionMap.ObjectType);
-
-                            <MudField>
-                            <MudFieldLabel ColumnSize="ColumnSize.Is6">@SettingsLocalization[actionMap.ObjectAction.Name+" "+aname]</FieldLabel>
-                            <MudFieldBody ColumnSize="ColumnSize.Is6">
-                                <RadioGroup @bind-CheckedValue=actionMap.AllowOrDeny>
-                                    <Radio Value="false">@SettingsLocalization["Deny"]</Radio>
-                                    <Radio Value="true">@SettingsLocalization["Allow"]</Radio>
-                                    <AppCloseButton Clicked="()=>RemoveActionAccess(actionMap)" />
-
-                                </RadioGroup>
-                            
-                        </MudField>
-                        }
+                        buttonDisabled = false;
                     }
-                }
+                    var name = Enum.GetName(typeof(ActiveDirectoryObjectType), adObjectType);
 
-            }
+                    <MudButton Width=Width.Is100 Disabled=buttonDisabled Color=Color.Success Clicked="()=>AddObjectTypeAccess(adObjectType)">@SettingsLocalization[name]</MudButton>
 
-            @if (ShowFields)
-            {
-                <h4>Fields</h4>
-
-                <MudField>
-
-                @foreach (var field in fields.OrderBy(f => f.FieldName))
-                    {
-
-                        if (ShowField(field))
-                        {
-                            var existingFieldAccess = WorkingModel.FieldMap.Where(m => m.Field.FieldName == field.FieldName).FirstOrDefault();
-                            if (existingFieldAccess == null)
-                            {
-                                <Column ColumnSize="ColumnSize.IsAuto" Margin="Margin.Is1">
-                                    <MudButton Color=Color.Secondary Clicked="()=>AddFieldAccess(field)">@SettingsLocalization[field.FieldName]</MudButton>
-                                </Column>
-                            }
-                        }
-                    }
-
-                </MudField>
-                foreach (var field in WorkingModel.FieldMap.OrderBy(f => f.Field.FieldName))
-                {
-
-
-                    <MudField>
-                    <MudFieldLabel ColumnSize="ColumnSize.Is6">@field.Field.FieldName</FieldLabel>
-                    <MudFieldBody ColumnSize="ColumnSize.Is6">
-                        <Select TValue="int" @bind-SelectedValue="field.FieldAccessLevelId">
-                            @foreach (FieldAccessLevel levelValue in FieldAccessLevels.Levels)
-                                {
-
-                                    <SelectItem Value="levelValue.Id">@SettingsLocalization[levelValue.Name]</SelectItem>
-
-                                }
-                            </Select>
-                            <AppCloseButton Clicked="()=>RemoveFieldAccess(field)" />
-
-                        
-                    </MudField>
                 }
             }
-        </Column>
+        </MudField>
     </Row>
-
-    @{
-        string buttonLabel = SettingsLocalization["Create Access Level"];
-        if (Model.Id > 0)
-            buttonLabel = SettingsLocalization["Update Access Level"];
-    }
-    <MudButton Color=Color.Success Margin=Margin.IsAuto.OnX Disabled=saveDisabled Clicked="CreateAccessLevel">@buttonLabel</MudButton>
-    @if (WorkingModel.Id != 0)
+    @if (WorkingModel.ObjectMap.Count > 0)
     {
-        <MudButton Color=Color.Error Margin=Margin.IsAuto.OnX Clicked="DeleteAccessLevel">@SettingsLocalization["Delete Access Level"]</MudButton>
+
+
+        <Row>
+            <h3>Assign Object Permissions</h3>
+
+        </Row>
     }
-</Validations>
+    @foreach (var objectMap in WorkingModel.ObjectMap)
+    {
+        //Prepare data to show object access fields
+
+        var name = Enum.GetName(typeof(ActiveDirectoryObjectType), objectMap.ObjectType);
+
+        <MudField>
+
+            <MudSelect T="int" ValueChanged="(int value)=>SetObjectMapAccess(objectMap,value)" Value="objectMap.ObjectAccessLevelId">
+
+                @foreach (ObjectAccessLevel levelValue in ObjectAccessLevels.Levels)
+                {
+                    <MudSelectItem Value="levelValue.Id">@SettingsLocalization[levelValue.Name]</MudSelectItem>
+
+                }
+            </MudSelect>
+            @if (objectMap.ObjectType == ActiveDirectoryObjectType.User && objectMap.ObjectAccessLevelId != ObjectAccessLevels.Deny.Id)
+            {
+                <MudSwitch Label="@SettingsLocalization["Allow Disabled User Access"]" @bind-Checked=objectMap.AllowDisabled />
+            }
+
+            <AppCloseButton Clicked="()=>RemoveObjectTypeAccess(objectMap)" />
+
+        </MudField>
+        @if (objectMap.ObjectAccessLevelId != 0 && objectMap.ObjectAccessLevelId != ObjectAccessLevels.Deny.Id)
+        {
+
+            <h4>@name Actions</h4>
+
+            <MudField>
+                @foreach (var action in actions.OrderBy(f => f.Name))
+                {
+                    if (action.IsActionAppropriateForObject(objectMap.ObjectType))
+                    {
+                        if (!WorkingModel.ActionMap.Any(a => a.ObjectAction == action))
+                        {
+
+
+
+                            <MudButton Color=Color.Secondary Clicked="()=>AddActionAccess(action,objectMap.ObjectType)">@SettingsLocalization[@action.Name+" "+@name]</MudButton>
+                        }
+                    }
+                }
+            </MudField>
+            @if (WorkingModel.ActionMap.Any())
+            {
+                foreach (var actionMap in WorkingModel.ActionMap.ToList())
+                {
+                    string? name = Enum.GetName(typeof(ActiveDirectoryObjectType), actionMap.ObjectType);
+
+                    <MudField>
+                        <MudText>@SettingsLocalization[actionMap.ObjectAction.Name+" "+name]</MudText>
+                        <MudRadioGroup T="bool" @bind-Value=actionMap.AllowOrDeny>
+                            <MudRadio T="bool" Tag="false">@SettingsLocalization["Deny"]</MudRadio>
+                            <MudRadio T="bool" Tag="true">@SettingsLocalization["Allow"]</MudRadio>
+                            <AppCloseButton Clicked="()=>RemoveActionAccess(actionMap)" />
+
+                        </MudRadioGroup>
+
+                    </MudField>
+                }
+            }
+        }
+
+    }
+
+    @if (ShowFields)
+    {
+        <h4>Fields</h4>
+
+        <MudField>
+
+            @foreach (var field in fields.OrderBy(f => f.FieldName))
+            {
+
+                if (ShowField(field))
+                {
+                    var existingFieldAccess = WorkingModel.FieldMap.Where(m => m.Field.FieldName == field.FieldName).FirstOrDefault();
+                    if (existingFieldAccess == null)
+                    {
+                        <MudButton Color=Color.Secondary Clicked="()=>AddFieldAccess(field)">@SettingsLocalization[field.FieldName]</MudButton>
+                    }
+                }
+            }
+
+        </MudField>
+        foreach (var field in WorkingModel.FieldMap.OrderBy(f => f.Field.FieldName))
+        {
+
+
+            <MudField>
+                <MudSelect Label="@field.Field.FieldName" T="int" @bind-Value="field.FieldAccessLevelId">
+                    @foreach (FieldAccessLevel levelValue in FieldAccessLevels.Levels)
+                    {
+
+                        <MudSelectItem Value="levelValue.Id">@SettingsLocalization[levelValue.Name]</MudSelectItem>
+
+                    }
+                </MudSelect>
+                <AppCloseButton Clicked="()=>RemoveFieldAccess(field)" />
+
+
+            </MudField>
+        }
+    }
+</Row>
+
+@{
+    string buttonLabel = SettingsLocalization["Create Access Level"];
+    if (Model.Id > 0)
+        buttonLabel = SettingsLocalization["Update Access Level"];
+}
+<MudButton Color=Color.Success Margin=Margin.IsAuto.OnX Disabled=saveDisabled Clicked="CreateAccessLevel">@buttonLabel</MudButton>
+@if (WorkingModel.Id != 0)
+{
+    <MudButton Color=Color.Error Margin=Margin.IsAuto.OnX Clicked="DeleteAccessLevel">@SettingsLocalization["Delete Access Level"]</MudButton>
+}
 @code {
 
     [Parameter]
